# Peer-Learning-Content-Factory

./: .env.example  .gitignore  DECISIONS.md  README.md  architecture.md  bugs.md  conftest.py  pyproject.toml
src/: __init__.py  config.py  graph.py  main.py  state.py
src/agents/: __init__.py  code_researcher.py  concept_mapper.py  diagram_generator.py  doc_analyzer.py  editor.py  linkedin_writer.py  pedagogy_planner.py  reel_writer.py  save_outputs.py  tech_reviewer.py  topic_parser.py  writer.py
src/agents/prompts/: code_researcher.txt  concept_mapper.txt  doc_analyzer.txt  editor.txt  linkedin_writer.txt  pedagogy_planner.txt  reel_writer.txt  tech_reviewer.txt  topic_parser.txt  writer.txt
src/templates/: guide_template.html  linkedin_template.md  reel_template.md
src/tools/: __init__.py  code_search.py  file_reader.py  repo_manifest.py
src/utils/: __init__.py  llm.py  markdown_parser.py  svg_builder.py
tests/: conftest.py  test_code_search.py  test_graph_flow.py  test_markdown_parser.py  test_phase2_agents.py  test_svg_builder.py  test_writer_rendering.py
tests/fixtures/: sample_concepts.md
tests/fixtures/sample_repo/: README.md  circuit_breaker.py  test_circuit_breaker.py
